refact: Refatorando usecases